--- a/app/styles.css
+++ b/app/styles.css
@@ -1,28 +1,31 @@
 /* Основной фон */
-.gradio-container {
+/*.gradio-container {
     background-color: #fef3c7;
-}
+} */
 
 /* Заголовок */
-.main-title h2 {
-  text-align: center;
-  font-size: 2rem;      /* увеличить размер */
-  color: #003366;       /* более темный синий */
-  margin-bottom: 0.5em;
+/* .main-title h2 { */
+  text-align: left;
+  font-size: 2rem;
+  margin: 0; /* Убираем отступы вокруг заголовка */
+  /*color: #003366;*/
+  margin-bottom: -5px; !important /* Убираем отступ снизу заголовка */
+  padding: 0;
 }
 
 
 /* Цитата */
 .quote-block {
-  text-align: center;
-  font-style: italic;        /* курсив */
-  background-color: #E0F5FF; /* светло-голубой фон, чтобы отделить цитату */
-  padding: 10px;
-  border-radius: 5px;
-  margin-bottom: 20px;
+  text-align: left;
+  /*font-style: italic;*/
+  padding: 0;
+  margin: -1px 0 0 0; /* верхний небольшой отступ, снизу чуть больше */
+  /*max-width: 30em;*/ /* ограничиваем ширину, чтобы не тянулась на всю строку */
+  line-height: 1.4em;
 }
 
-.left-col {
+
+/* .left-col {  */
   background-color: #CDE8FA; /* более тёмный голубой */
   padding: 20px;
   /* Можно и цвет текста подкорректировать */
@@ -32,7 +35,7 @@
 .right-col {
   background-color: #F0FAFF; /* посветлее */
   padding: 20px;
-  color: #003366;
+  color: #fef3c7;
 }
 
   /* Поле для конспекта */
@@ -41,8 +44,10 @@
   border-radius: 12px;
   background-color: #ffffff;
   padding: 20px;
-  min-height: 700px;
+  min-height: 1100px;
   font-style: italic;
   color: #555;
   box-shadow: 0 2px 6px rgba(0,0,0,0.05);
 }
+
+/*#f5f5f5*/
