--- a/app/styles.css
+++ b/app/styles.css
@@ -51,3 +51,12 @@
 }
 
 /*#f5f5f5*/
+
+.accordion-button {
+    font-weight: bold;
+    text-align: center;
+    background-color: #f0f0f0;
+    padding: 0.7em;
+    border-radius: 8px;
+    cursor: pointer;
+}
