--- a/app/styles.css
+++ b/app/styles.css
@@ -52,11 +52,13 @@
 
 /*#f5f5f5*/
 
-.accordion-button {
+/* Стилизуем заголовок аккордеона (самую "кнопку") */
+.accordion > div:first-child {
     font-weight: bold;
     text-align: center;
-    background-color: #f0f0f0;
-    padding: 0.7em;
+    background-color: #f7f7f7;
+    padding: 10px;
     border-radius: 8px;
     cursor: pointer;
 }
+
