--- a/app/styles.css
+++ b/app/styles.css
@@ -63,10 +63,7 @@
 }
 
 .feedback-confirmation {
-    padding: 1em;
-    background-color: #e6ffe6;
-    border: 1px solid #66cc66;
-    border-radius: 0.5em;
-    color: #336633;
-    font-weight: bold;
+    display: block !important;
+    margin-top: 10px;
+    color: green;
 }
